# cmake_demo

./: .gitignore  参考文档.doc  待解决问题.txt
src/: CMakeLists.txt
src/cexportdemodll/: CMakeLists.txt  ctooldemo.cpp
src/hellodll/: CMakeLists.txt  hellofun.cpp
src/hellomain/: CMakeLists.txt  main.cpp
src/include/cexportdemodll/: cexportdemodll_exportdef.h  ctooldemo.h
src/include/hellodll/: hello_exportdef.h  hellofun.h
